fix: todo app padding bottom on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -47,8 +47,8 @@ todo-app {
   width: 80%;
   background-color: #ffffff;
   margin: 20px 0;
-  padding: 0 20px;
-  border-radius: 24px;
+  padding: 0 20px 48px;
+  border-radius: 24px; 
 }
 
 @media screen and (min-width: 768px){
@@ -60,7 +60,7 @@ todo-app {
 @media screen and (min-width: 1000px){
   todo-app {
       max-width: 1024px;
-      padding: 0 120px;
+      padding: 0 120px 48px;
   }
 }
 
